--- a/.gitignore
+++ b/.gitignore
@@ -2,4 +2,4 @@ source/__pycache__
 source/auriga/__pycache__
 .vscode/
 source/utils/__pycache__
-images/level*/au*/density_maps.png
+images/*/density_maps/*
