--- a/configs/02.yml
+++ b/configs/02.yml
@@ -25,3 +25,7 @@ ABUNDANCE_PROFILES:
 ABUNDANCE_PROFILE_FIT:
   MIN_RADIUS_CKPC:            4.0
   MAX_RADIUS_CKPC:            15.0
+DENSITY_PROFILES:
+  N_BINS:                     100
+  MIN_RADIUS_CKPC:            0.0
+  MAX_RADIUS_CKPC:            50.0
