Rename variables in configuration file.

--- a/configs/02.yml
+++ b/configs/02.yml
@@ -18,14 +18,14 @@ AGE_METALLICITY_RELATION:
   AGE_MIN:                    0.0
   AGE_MAX:                    14.0
   DECIMALS:                   6
-ABUNDANCE_PROFILES:
-  N_BINS:                     100
-  MIN_RADIUS_CKPC:            0.0
-  MAX_RADIUS_CKPC:            50.0
-ABUNDANCE_PROFILE_FIT:
-  MIN_DISC_RADIUS_FRAC:       0.2
-  MAX_DISC_RADIUS_FRAC:       1.0
 DENSITY_PROFILES:
   N_BINS:                     100
   MIN_RADIUS_CKPC:            0.0
   MAX_RADIUS_CKPC:            50.0
+AB_PROF_N_BINS:               100
+AB_PROF_MIN_RADIUS_CKPC:      0.0
+AB_PROF_MAX_RADIUS_CKPC:      50.0
+AB_PROF_FIT_MIN_DSC_RAD_FRAC: 0.2
+AB_PROF_FIT_MAX_DSC_RAD_FRAC: 1.0
+AB_PROF_MIN_STELL_AGE_GYR:    0.0
+AB_PROF_MAX_STELL_AGE_GYR:    14.0
