--- a/.gitignore
+++ b/.gitignore
@@ -13,91 +13,4 @@ data/grand_2017.csv
 images/merger_effects
 pbd
 data/cooling
-images/warm_disc_star_tracking/temp/snapshot_40.png
-images/warm_disc_star_tracking/temp/snapshot_41.png
-images/warm_disc_star_tracking/temp/snapshot_42.png
-images/warm_disc_star_tracking/temp/snapshot_43.png
-images/warm_disc_star_tracking/temp/snapshot_44.png
-images/warm_disc_star_tracking/temp/snapshot_45.png
-images/warm_disc_star_tracking/temp/snapshot_46.png
-images/warm_disc_star_tracking/temp/snapshot_47.png
-images/warm_disc_star_tracking/temp/snapshot_48.png
-images/warm_disc_star_tracking/temp/snapshot_49.png
-images/warm_disc_star_tracking/temp/snapshot_50.png
-images/warm_disc_star_tracking/temp/snapshot_51.png
-images/warm_disc_star_tracking/temp/snapshot_52.png
-images/warm_disc_star_tracking/temp/snapshot_53.png
-images/warm_disc_star_tracking/temp/snapshot_54.png
-images/warm_disc_star_tracking/temp/snapshot_55.png
-images/warm_disc_star_tracking/temp/snapshot_56.png
-images/warm_disc_star_tracking/temp/snapshot_57.png
-images/warm_disc_star_tracking/temp/snapshot_58.png
-images/warm_disc_star_tracking/temp/snapshot_59.png
-images/warm_disc_star_tracking/temp/snapshot_60.png
-images/warm_disc_star_tracking/temp/snapshot_61.png
-images/warm_disc_star_tracking/temp/snapshot_62.png
-images/warm_disc_star_tracking/temp/snapshot_63.png
-images/warm_disc_star_tracking/temp/snapshot_64.png
-images/warm_disc_star_tracking/temp/snapshot_65.png
-images/warm_disc_star_tracking/temp/snapshot_66.png
-images/warm_disc_star_tracking/temp/snapshot_67.png
-images/warm_disc_star_tracking/temp/snapshot_68.png
-images/warm_disc_star_tracking/temp/snapshot_69.png
-images/warm_disc_star_tracking/temp/snapshot_70.png
-images/warm_disc_star_tracking/temp/snapshot_71.png
-images/warm_disc_star_tracking/temp/snapshot_72.png
-images/warm_disc_star_tracking/temp/snapshot_73.png
-images/warm_disc_star_tracking/temp/snapshot_74.png
-images/warm_disc_star_tracking/temp/snapshot_75.png
-images/warm_disc_star_tracking/temp/snapshot_76.png
-images/warm_disc_star_tracking/temp/snapshot_77.png
-images/warm_disc_star_tracking/temp/snapshot_78.png
-images/warm_disc_star_tracking/temp/snapshot_79.png
-images/warm_disc_star_tracking/temp/snapshot_80.png
-images/warm_disc_star_tracking/temp/snapshot_81.png
-images/warm_disc_star_tracking/temp/snapshot_82.png
-images/warm_disc_star_tracking/temp/snapshot_83.png
-images/warm_disc_star_tracking/temp/snapshot_84.png
-images/warm_disc_star_tracking/temp/snapshot_85.png
-images/warm_disc_star_tracking/temp/snapshot_86.png
-images/warm_disc_star_tracking/temp/snapshot_87.png
-images/warm_disc_star_tracking/temp/snapshot_88.png
-images/warm_disc_star_tracking/temp/snapshot_89.png
-images/warm_disc_star_tracking/temp/snapshot_90.png
-images/warm_disc_star_tracking/temp/snapshot_91.png
-images/warm_disc_star_tracking/temp/snapshot_92.png
-images/warm_disc_star_tracking/temp/snapshot_93.png
-images/warm_disc_star_tracking/temp/snapshot_94.png
-images/warm_disc_star_tracking/temp/snapshot_95.png
-images/warm_disc_star_tracking/temp/snapshot_96.png
-images/warm_disc_star_tracking/temp/snapshot_97.png
-images/warm_disc_star_tracking/temp/snapshot_98.png
-images/warm_disc_star_tracking/temp/snapshot_99.png
-images/warm_disc_star_tracking/temp/snapshot_100.png
-images/warm_disc_star_tracking/temp/snapshot_101.png
-images/warm_disc_star_tracking/temp/snapshot_102.png
-images/warm_disc_star_tracking/temp/snapshot_103.png
-images/warm_disc_star_tracking/temp/snapshot_104.png
-images/warm_disc_star_tracking/temp/snapshot_105.png
-images/warm_disc_star_tracking/temp/snapshot_106.png
-images/warm_disc_star_tracking/temp/snapshot_107.png
-images/warm_disc_star_tracking/temp/snapshot_108.png
-images/warm_disc_star_tracking/temp/snapshot_109.png
-images/warm_disc_star_tracking/temp/snapshot_110.png
-images/warm_disc_star_tracking/temp/snapshot_111.png
-images/warm_disc_star_tracking/temp/snapshot_112.png
-images/warm_disc_star_tracking/temp/snapshot_113.png
-images/warm_disc_star_tracking/temp/snapshot_114.png
-images/warm_disc_star_tracking/temp/snapshot_115.png
-images/warm_disc_star_tracking/temp/snapshot_116.png
-images/warm_disc_star_tracking/temp/snapshot_117.png
-images/warm_disc_star_tracking/temp/snapshot_118.png
-images/warm_disc_star_tracking/temp/snapshot_119.png
-images/warm_disc_star_tracking/temp/snapshot_120.png
-images/warm_disc_star_tracking/temp/snapshot_121.png
-images/warm_disc_star_tracking/temp/snapshot_122.png
-images/warm_disc_star_tracking/temp/snapshot_123.png
-images/warm_disc_star_tracking/temp/snapshot_124.png
-images/warm_disc_star_tracking/temp/snapshot_125.png
-images/warm_disc_star_tracking/temp/snapshot_126.png
-images/warm_disc_star_tracking/temp/snapshot_127.png
+images/warm_disc_star_tracking/temp/
